P5/src/y.output
Estado 131 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PRINCIPAL bloque

    3 $@2: %empty

    4 $@3: %empty

    5 $@4: %empty

    6 bloque: INI_BLOQUE $@2 $@3 interiorBloque FIN_BLOQUE $@4

    7 interiorBloque: dec_var_loc dec_subprogs
    8               | dec_var_loc dec_subprogs sentencias

    9 dec_subprogs: dec_subprogs dec_subprog
   10             | %empty

   11 $@5: %empty

   12 dec_subprog: cabe_subprog $@5 bloque

   13 $@6: %empty

   14 cabe_subprog: TIPO_BASICO identificador $@6 INI_EXPR cabe2

   15 $@7: %empty

   16 cabe2: lista_parametros FIN_EXPR $@7
   17      | FIN_EXPR

   18 $@8: %empty

   19 $@9: %empty

   20 dec_var_loc: $@8 INI_VAR $@9 var_loc FIN_VAR
   21            | %empty

   22 var_loc: var_loc cuerpo_dec_var
   23        | cuerpo_dec_var

   24 $@10: %empty

   25 $@11: %empty

   26 cuerpo_dec_var: TIPO_BASICO $@10 $@11 lista_identificador PTCOMA
   27               | error

   28 $@12: %empty

   29 sentencias: sentencias $@12 sentencia

   30 $@13: %empty

   31 sentencias: $@13 sentencia

   32 sentencia: bloque
   33          | sentencia_asig
   34          | sentencia_if
   35          | sentencia_do_until
   36          | sentencia_entrada
   37          | sentencia_salida
   38          | sentencia_return
   39          | error

   40 sentencia_asig: array_ident ASIG expresion PTCOMA

   41 sentencia_if: SI INI_EXPR expresion FIN_EXPR sentencia
   42             | SI INI_EXPR expresion FIN_EXPR sentencia SI_NO sentencia

   43 sentencia_do_until: HACER bloque HASTA INI_EXPR expresion FIN_EXPR

   44 $@14: %empty

   45 sentencia_entrada: ENTRADA $@14 lista_identificador PTCOMA

   46 $@15: %empty

   47 $@16: %empty

   48 sentencia_salida: SALIDA $@15 lista_expr PTCOMA $@16
   49                 | SALIDA CADENA2 PTCOMA

   50 @17: %empty

   51 sentencia_return: RETORNO expresion @17 PTCOMA

   52 expresion: INI_EXPR expresion FIN_EXPR
   53          | array_ident
   54          | SUMARESTA expresion
   55          | OPUNARIO expresion
   56          | expresion OR expresion
   57          | expresion AND expresion
   58          | expresion XOR expresion
   59          | expresion OPIGUAL expresion
   60          | expresion SUMARESTA expresion
   61          | expresion OPREL expresion
   62          | expresion OPMUL expresion
   63          | funcion
   64          | constante
   65          | error

   66 constante: CTE_ENTERA
   67          | const_matriz
   68          | CTE_LOGICA
   69          | CTE_REAL
   70          | CTE_CARACTER

   71 funcion: identificador INI_EXPR lista_expr FIN_EXPR
   72        | identificador INI_EXPR FIN_EXPR

   73 const_matriz: INI_BLOQUE lista_expr FIN_BLOQUE

   74 lista_identificador: lista_identificador COMA ident_array
   75                    | ident_array

   76 ident_array: identificador
   77            | identificador INI_TAM num FIN_TAM
   78            | identificador INI_TAM num FIN_TAM INI_TAM num FIN_TAM
   79            | error

   80 array_ident: identificador
   81            | identificador INI_TAM lista_expr FIN_TAM
   82            | identificador INI_TAM lista_expr FIN_TAM INI_TAM lista_expr FIN_TAM

   83 lista_parametros: lista_parametros COMA TIPO_BASICO ident_array
   84                 | TIPO_BASICO ident_array
   85                 | lista_parametros error TIPO_BASICO ident_array

   86 identificador: CADENA

   87 num: CTE_ENTERA

   88 $@18: %empty

   89 lista_expr: lista_expr COMA expresion $@18

   90 $@19: %empty

   91 lista_expr: expresion $@19


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 27 39 65 79 85
    PRINCIPAL (258) 2
    INI_BLOQUE (259) 6 73
    FIN_BLOQUE (260) 6 73
    INI_VAR (261) 20
    FIN_VAR (262) 20
    INI_EXPR (263) 14 41 42 43 52 71 72
    FIN_EXPR (264) 16 17 41 42 43 52 71 72
    INI_TAM (265) 77 78 81 82
    FIN_TAM (266) 77 78 81 82
    PTCOMA (267) 26 40 45 48 49 51
    COMA (268) 74 83 89
    TIPO_BASICO (269) 14 26 83 84 85
    CADENA (270) 86
    CTE_CARACTER (271) 70
    CTE_ENTERA (272) 66 87
    CTE_LOGICA (273) 68
    CTE_REAL (274) 69
    SI (275) 41 42
    SI_NO (276) 42
    RETORNO (277) 51
    ENTRADA (278) 45
    SALIDA (279) 48 49
    HACER (280) 43
    HASTA (281) 43
    CADENA2 (282) 49
    OR (283) 56
    AND (284) 57
    XOR (285) 58
    ASIG (286) 40
    OPREL (287) 61
    OPIGUAL (288) 59
    SUMARESTA (289) 54 60
    OPMUL (290) 62
    OPUNARIO (291) 55


No terminales con las reglas donde aparecen

    $accept (37)
        on left: 0
    programa (38)
        on left: 2
        on right: 0
    $@1 (39)
        on left: 1
        on right: 2
    bloque (40)
        on left: 6
        on right: 2 12 32 43
    $@2 (41)
        on left: 3
        on right: 6
    $@3 (42)
        on left: 4
        on right: 6
    $@4 (43)
        on left: 5
        on right: 6
    interiorBloque (44)
        on left: 7 8
        on right: 6
    dec_subprogs (45)
        on left: 9 10
        on right: 7 8 9
    dec_subprog (46)
        on left: 12
        on right: 9
    $@5 (47)
        on left: 11
        on right: 12
    cabe_subprog (48)
        on left: 14
        on right: 12
    $@6 (49)
        on left: 13
        on right: 14
    cabe2 (50)
        on left: 16 17
        on right: 14
    $@7 (51)
        on left: 15
        on right: 16
    dec_var_loc (52)
        on left: 20 21
        on right: 7 8
    $@8 (53)
        on left: 18
        on right: 20
    $@9 (54)
        on left: 19
        on right: 20
    var_loc (55)
        on left: 22 23
        on right: 20 22
    cuerpo_dec_var (56)
        on left: 26 27
        on right: 22 23
    $@10 (57)
        on left: 24
        on right: 26
    $@11 (58)
        on left: 25
        on right: 26
    sentencias (59)
        on left: 29 31
        on right: 8 29
    $@12 (60)
        on left: 28
        on right: 29
    $@13 (61)
        on left: 30
        on right: 31
    sentencia (62)
        on left: 32 33 34 35 36 37 38 39
        on right: 29 31 41 42
    sentencia_asig (63)
        on left: 40
        on right: 33
    sentencia_if (64)
        on left: 41 42
        on right: 34
    sentencia_do_until (65)
        on left: 43
        on right: 35
    sentencia_entrada (66)
        on left: 45
        on right: 36
    $@14 (67)
        on left: 44
        on right: 45
    sentencia_salida (68)
        on left: 48 49
        on right: 37
    $@15 (69)
        on left: 46
        on right: 48
    $@16 (70)
        on left: 47
        on right: 48
    sentencia_return (71)
        on left: 51
        on right: 38
    @17 (72)
        on left: 50
        on right: 51
    expresion (73)
        on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65
        on right: 40 41 42 43 51 52 54 55 56 57 58 59 60 61 62 89 91
    constante (74)
        on left: 66 67 68 69 70
        on right: 64
    funcion (75)
        on left: 71 72
        on right: 63
    const_matriz (76)
        on left: 73
        on right: 67
    lista_identificador (77)
        on left: 74 75
        on right: 26 45 74
    ident_array (78)
        on left: 76 77 78 79
        on right: 74 75 83 84 85
    array_ident (79)
        on left: 80 81 82
        on right: 40 53
    lista_parametros (80)
        on left: 83 84 85
        on right: 16 83 85
    identificador (81)
        on left: 86
        on right: 14 71 72 76 77 78 80 81 82
    num (82)
        on left: 87
        on right: 77 78
    lista_expr (83)
        on left: 89 91
        on right: 48 71 73 81 82 89
    $@18 (84)
        on left: 88
        on right: 89
    $@19 (85)
        on left: 90
        on right: 91


Estado 0

    0 $accept: . programa $end

    $default  reduce usando la regla 1 ($@1)

    programa  ir al estado 1
    $@1       ir al estado 2


Estado 1

    0 $accept: programa . $end

    $end  desplazar e ir al estado 3


Estado 2

    2 programa: $@1 . PRINCIPAL bloque

    PRINCIPAL  desplazar e ir al estado 4


Estado 3

    0 $accept: programa $end .

    $default  aceptar


Estado 4

    2 programa: $@1 PRINCIPAL . bloque

    INI_BLOQUE  desplazar e ir al estado 5

    bloque  ir al estado 6


Estado 5

    6 bloque: INI_BLOQUE . $@2 $@3 interiorBloque FIN_BLOQUE $@4

    $default  reduce usando la regla 3 ($@2)

    $@2  ir al estado 7


Estado 6

    2 programa: $@1 PRINCIPAL bloque .

    $default  reduce usando la regla 2 (programa)


Estado 7

    6 bloque: INI_BLOQUE $@2 . $@3 interiorBloque FIN_BLOQUE $@4

    $default  reduce usando la regla 4 ($@3)

    $@3  ir al estado 8


Estado 8

    6 bloque: INI_BLOQUE $@2 $@3 . interiorBloque FIN_BLOQUE $@4

    INI_VAR   reduce usando la regla 18 ($@8)
    $default  reduce usando la regla 21 (dec_var_loc)

    interiorBloque  ir al estado 9
    dec_var_loc     ir al estado 10
    $@8             ir al estado 11


Estado 9

    6 bloque: INI_BLOQUE $@2 $@3 interiorBloque . FIN_BLOQUE $@4

    FIN_BLOQUE  desplazar e ir al estado 12


Estado 10

    7 interiorBloque: dec_var_loc . dec_subprogs
    8               | dec_var_loc . dec_subprogs sentencias

    $default  reduce usando la regla 10 (dec_subprogs)

    dec_subprogs  ir al estado 13


Estado 11

   20 dec_var_loc: $@8 . INI_VAR $@9 var_loc FIN_VAR

    INI_VAR  desplazar e ir al estado 14


Estado 12

    6 bloque: INI_BLOQUE $@2 $@3 interiorBloque FIN_BLOQUE . $@4

    $default  reduce usando la regla 5 ($@4)

    $@4  ir al estado 15


Estado 13

    7 interiorBloque: dec_var_loc dec_subprogs .
    8               | dec_var_loc dec_subprogs . sentencias
    9 dec_subprogs: dec_subprogs . dec_subprog

    TIPO_BASICO  desplazar e ir al estado 16

    FIN_BLOQUE  reduce usando la regla 7 (interiorBloque)
    $default    reduce usando la regla 30 ($@13)

    dec_subprog   ir al estado 17
    cabe_subprog  ir al estado 18
    sentencias    ir al estado 19
    $@13          ir al estado 20


Estado 14

   20 dec_var_loc: $@8 INI_VAR . $@9 var_loc FIN_VAR

    $default  reduce usando la regla 19 ($@9)

    $@9  ir al estado 21


Estado 15

    6 bloque: INI_BLOQUE $@2 $@3 interiorBloque FIN_BLOQUE $@4 .

    $default  reduce usando la regla 6 (bloque)


Estado 16

   14 cabe_subprog: TIPO_BASICO . identificador $@6 INI_EXPR cabe2

    CADENA  desplazar e ir al estado 22

    identificador  ir al estado 23


Estado 17

    9 dec_subprogs: dec_subprogs dec_subprog .

    $default  reduce usando la regla 9 (dec_subprogs)


Estado 18

   12 dec_subprog: cabe_subprog . $@5 bloque

    $default  reduce usando la regla 11 ($@5)

    $@5  ir al estado 24


Estado 19

    8 interiorBloque: dec_var_loc dec_subprogs sentencias .
   29 sentencias: sentencias . $@12 sentencia

    FIN_BLOQUE  reduce usando la regla 8 (interiorBloque)
    $default    reduce usando la regla 28 ($@12)

    $@12  ir al estado 25


Estado 20

   31 sentencias: $@13 . sentencia

    error       desplazar e ir al estado 26
    INI_BLOQUE  desplazar e ir al estado 5
    CADENA      desplazar e ir al estado 22
    SI          desplazar e ir al estado 27
    RETORNO     desplazar e ir al estado 28
    ENTRADA     desplazar e ir al estado 29
    SALIDA      desplazar e ir al estado 30
    HACER       desplazar e ir al estado 31

    bloque              ir al estado 32
    sentencia           ir al estado 33
    sentencia_asig      ir al estado 34
    sentencia_if        ir al estado 35
    sentencia_do_until  ir al estado 36
    sentencia_entrada   ir al estado 37
    sentencia_salida    ir al estado 38
    sentencia_return    ir al estado 39
    array_ident         ir al estado 40
    identificador       ir al estado 41


Estado 21

   20 dec_var_loc: $@8 INI_VAR $@9 . var_loc FIN_VAR

    error        desplazar e ir al estado 42
    TIPO_BASICO  desplazar e ir al estado 43

    var_loc         ir al estado 44
    cuerpo_dec_var  ir al estado 45


Estado 22

   86 identificador: CADENA .

    $default  reduce usando la regla 86 (identificador)


Estado 23

   14 cabe_subprog: TIPO_BASICO identificador . $@6 INI_EXPR cabe2

    $default  reduce usando la regla 13 ($@6)

    $@6  ir al estado 46


Estado 24

   12 dec_subprog: cabe_subprog $@5 . bloque

    INI_BLOQUE  desplazar e ir al estado 5

    bloque  ir al estado 47


Estado 25

   29 sentencias: sentencias $@12 . sentencia

    error       desplazar e ir al estado 26
    INI_BLOQUE  desplazar e ir al estado 5
    CADENA      desplazar e ir al estado 22
    SI          desplazar e ir al estado 27
    RETORNO     desplazar e ir al estado 28
    ENTRADA     desplazar e ir al estado 29
    SALIDA      desplazar e ir al estado 30
    HACER       desplazar e ir al estado 31

    bloque              ir al estado 32
    sentencia           ir al estado 48
    sentencia_asig      ir al estado 34
    sentencia_if        ir al estado 35
    sentencia_do_until  ir al estado 36
    sentencia_entrada   ir al estado 37
    sentencia_salida    ir al estado 38
    sentencia_return    ir al estado 39
    array_ident         ir al estado 40
    identificador       ir al estado 41


Estado 26

   39 sentencia: error .

    $default  reduce usando la regla 39 (sentencia)


Estado 27

   41 sentencia_if: SI . INI_EXPR expresion FIN_EXPR sentencia
   42             | SI . INI_EXPR expresion FIN_EXPR sentencia SI_NO sentencia

    INI_EXPR  desplazar e ir al estado 49


Estado 28

   51 sentencia_return: RETORNO . expresion @17 PTCOMA

    error         desplazar e ir al estado 50
    INI_BLOQUE    desplazar e ir al estado 51
    INI_EXPR      desplazar e ir al estado 52
    CADENA        desplazar e ir al estado 22
    CTE_CARACTER  desplazar e ir al estado 53
    CTE_ENTERA    desplazar e ir al estado 54
    CTE_LOGICA    desplazar e ir al estado 55
    CTE_REAL      desplazar e ir al estado 56
    SUMARESTA     desplazar e ir al estado 57
    OPUNARIO      desplazar e ir al estado 58

    expresion      ir al estado 59
    constante      ir al estado 60
    funcion        ir al estado 61
    const_matriz   ir al estado 62
    array_ident    ir al estado 63
    identificador  ir al estado 64


Estado 29

   45 sentencia_entrada: ENTRADA . $@14 lista_identificador PTCOMA

    $default  reduce usando la regla 44 ($@14)

    $@14  ir al estado 65


Estado 30

   48 sentencia_salida: SALIDA . $@15 lista_expr PTCOMA $@16
   49                 | SALIDA . CADENA2 PTCOMA

    CADENA2  desplazar e ir al estado 66

    $default  reduce usando la regla 46 ($@15)

    $@15  ir al estado 67


Estado 31

   43 sentencia_do_until: HACER . bloque HASTA INI_EXPR expresion FIN_EXPR

    INI_BLOQUE  desplazar e ir al estado 5

    bloque  ir al estado 68


Estado 32

   32 sentencia: bloque .

    $default  reduce usando la regla 32 (sentencia)


Estado 33

   31 sentencias: $@13 sentencia .

    $default  reduce usando la regla 31 (sentencias)


Estado 34

   33 sentencia: sentencia_asig .

    $default  reduce usando la regla 33 (sentencia)


Estado 35

   34 sentencia: sentencia_if .

    $default  reduce usando la regla 34 (sentencia)


Estado 36

   35 sentencia: sentencia_do_until .

    $default  reduce usando la regla 35 (sentencia)


Estado 37

   36 sentencia: sentencia_entrada .

    $default  reduce usando la regla 36 (sentencia)


Estado 38

   37 sentencia: sentencia_salida .

    $default  reduce usando la regla 37 (sentencia)


Estado 39

   38 sentencia: sentencia_return .

    $default  reduce usando la regla 38 (sentencia)


Estado 40

   40 sentencia_asig: array_ident . ASIG expresion PTCOMA

    ASIG  desplazar e ir al estado 69


Estado 41

   80 array_ident: identificador .
   81            | identificador . INI_TAM lista_expr FIN_TAM
   82            | identificador . INI_TAM lista_expr FIN_TAM INI_TAM lista_expr FIN_TAM

    INI_TAM  desplazar e ir al estado 70

    $default  reduce usando la regla 80 (array_ident)


Estado 42

   27 cuerpo_dec_var: error .

    $default  reduce usando la regla 27 (cuerpo_dec_var)


Estado 43

   26 cuerpo_dec_var: TIPO_BASICO . $@10 $@11 lista_identificador PTCOMA

    $default  reduce usando la regla 24 ($@10)

    $@10  ir al estado 71


Estado 44

   20 dec_var_loc: $@8 INI_VAR $@9 var_loc . FIN_VAR
   22 var_loc: var_loc . cuerpo_dec_var

    error        desplazar e ir al estado 42
    FIN_VAR      desplazar e ir al estado 72
    TIPO_BASICO  desplazar e ir al estado 43

    cuerpo_dec_var  ir al estado 73


Estado 45

   23 var_loc: cuerpo_dec_var .

    $default  reduce usando la regla 23 (var_loc)


Estado 46

   14 cabe_subprog: TIPO_BASICO identificador $@6 . INI_EXPR cabe2

    INI_EXPR  desplazar e ir al estado 74


Estado 47

   12 dec_subprog: cabe_subprog $@5 bloque .

    $default  reduce usando la regla 12 (dec_subprog)


Estado 48

   29 sentencias: sentencias $@12 sentencia .

    $default  reduce usando la regla 29 (sentencias)


Estado 49

   41 sentencia_if: SI INI_EXPR . expresion FIN_EXPR sentencia
   42             | SI INI_EXPR . expresion FIN_EXPR sentencia SI_NO sentencia

    error         desplazar e ir al estado 50
    INI_BLOQUE    desplazar e ir al estado 51
    INI_EXPR      desplazar e ir al estado 52
    CADENA        desplazar e ir al estado 22
    CTE_CARACTER  desplazar e ir al estado 53
    CTE_ENTERA    desplazar e ir al estado 54
    CTE_LOGICA    desplazar e ir al estado 55
    CTE_REAL      desplazar e ir al estado 56
    SUMARESTA     desplazar e ir al estado 57
    OPUNARIO      desplazar e ir al estado 58

    expresion      ir al estado 75
    constante      ir al estado 60
    funcion        ir al estado 61
    const_matriz   ir al estado 62
    array_ident    ir al estado 63
    identificador  ir al estado 64


Estado 50

   65 expresion: error .

    $default  reduce usando la regla 65 (expresion)


Estado 51

   73 const_matriz: INI_BLOQUE . lista_expr FIN_BLOQUE

    error         desplazar e ir al estado 50
    INI_BLOQUE    desplazar e ir al estado 51
    INI_EXPR      desplazar e ir al estado 52
    CADENA        desplazar e ir al estado 22
    CTE_CARACTER  desplazar e ir al estado 53
    CTE_ENTERA    desplazar e ir al estado 54
    CTE_LOGICA    desplazar e ir al estado 55
    CTE_REAL      desplazar e ir al estado 56
    SUMARESTA     desplazar e ir al estado 57
    OPUNARIO      desplazar e ir al estado 58

    expresion      ir al estado 76
    constante      ir al estado 60
    funcion        ir al estado 61
    const_matriz   ir al estado 62
    array_ident    ir al estado 63
    identificador  ir al estado 64
    lista_expr     ir al estado 77


Estado 52

   52 expresion: INI_EXPR . expresion FIN_EXPR

    error         desplazar e ir al estado 50
    INI_BLOQUE    desplazar e ir al estado 51
    INI_EXPR      desplazar e ir al estado 52
    CADENA        desplazar e ir al estado 22
    CTE_CARACTER  desplazar e ir al estado 53
    CTE_ENTERA    desplazar e ir al estado 54
    CTE_LOGICA    desplazar e ir al estado 55
    CTE_REAL      desplazar e ir al estado 56
    SUMARESTA     desplazar e ir al estado 57
    OPUNARIO      desplazar e ir al estado 58

    expresion      ir al estado 78
    constante      ir al estado 60
    funcion        ir al estado 61
    const_matriz   ir al estado 62
    array_ident    ir al estado 63
    identificador  ir al estado 64


Estado 53

   70 constante: CTE_CARACTER .

    $default  reduce usando la regla 70 (constante)


Estado 54

   66 constante: CTE_ENTERA .

    $default  reduce usando la regla 66 (constante)


Estado 55

   68 constante: CTE_LOGICA .

    $default  reduce usando la regla 68 (constante)


Estado 56

   69 constante: CTE_REAL .

    $default  reduce usando la regla 69 (constante)


Estado 57

   54 expresion: SUMARESTA . expresion

    error         desplazar e ir al estado 50
    INI_BLOQUE    desplazar e ir al estado 51
    INI_EXPR      desplazar e ir al estado 52
    CADENA        desplazar e ir al estado 22
    CTE_CARACTER  desplazar e ir al estado 53
    CTE_ENTERA    desplazar e ir al estado 54
    CTE_LOGICA    desplazar e ir al estado 55
    CTE_REAL      desplazar e ir al estado 56
    SUMARESTA     desplazar e ir al estado 57
    OPUNARIO      desplazar e ir al estado 58

    expresion      ir al estado 79
    constante      ir al estado 60
    funcion        ir al estado 61
    const_matriz   ir al estado 62
    array_ident    ir al estado 63
    identificador  ir al estado 64


Estado 58

   55 expresion: OPUNARIO . expresion

    error         desplazar e ir al estado 50
    INI_BLOQUE    desplazar e ir al estado 51
    INI_EXPR      desplazar e ir al estado 52
    CADENA        desplazar e ir al estado 22
    CTE_CARACTER  desplazar e ir al estado 53
    CTE_ENTERA    desplazar e ir al estado 54
    CTE_LOGICA    desplazar e ir al estado 55
    CTE_REAL      desplazar e ir al estado 56
    SUMARESTA     desplazar e ir al estado 57
    OPUNARIO      desplazar e ir al estado 58

    expresion      ir al estado 80
    constante      ir al estado 60
    funcion        ir al estado 61
    const_matriz   ir al estado 62
    array_ident    ir al estado 63
    identificador  ir al estado 64


Estado 59

   51 sentencia_return: RETORNO expresion . @17 PTCOMA
   56 expresion: expresion . OR expresion
   57          | expresion . AND expresion
   58          | expresion . XOR expresion
   59          | expresion . OPIGUAL expresion
   60          | expresion . SUMARESTA expresion
   61          | expresion . OPREL expresion
   62          | expresion . OPMUL expresion

    OR         desplazar e ir al estado 81
    AND        desplazar e ir al estado 82
    XOR        desplazar e ir al estado 83
    OPREL      desplazar e ir al estado 84
    OPIGUAL    desplazar e ir al estado 85
    SUMARESTA  desplazar e ir al estado 86
    OPMUL      desplazar e ir al estado 87

    $default  reduce usando la regla 50 (@17)

    @17  ir al estado 88


Estado 60

   64 expresion: constante .

    $default  reduce usando la regla 64 (expresion)


Estado 61

   63 expresion: funcion .

    $default  reduce usando la regla 63 (expresion)


Estado 62

   67 constante: const_matriz .

    $default  reduce usando la regla 67 (constante)


Estado 63

   53 expresion: array_ident .

    $default  reduce usando la regla 53 (expresion)


Estado 64

   71 funcion: identificador . INI_EXPR lista_expr FIN_EXPR
   72        | identificador . INI_EXPR FIN_EXPR
   80 array_ident: identificador .
   81            | identificador . INI_TAM lista_expr FIN_TAM
   82            | identificador . INI_TAM lista_expr FIN_TAM INI_TAM lista_expr FIN_TAM

    INI_EXPR  desplazar e ir al estado 89
    INI_TAM   desplazar e ir al estado 70

    $default  reduce usando la regla 80 (array_ident)


Estado 65

   45 sentencia_entrada: ENTRADA $@14 . lista_identificador PTCOMA

    error   desplazar e ir al estado 90
    CADENA  desplazar e ir al estado 22

    lista_identificador  ir al estado 91
    ident_array          ir al estado 92
    identificador        ir al estado 93


Estado 66

   49 sentencia_salida: SALIDA CADENA2 . PTCOMA

    PTCOMA  desplazar e ir al estado 94


Estado 67

   48 sentencia_salida: SALIDA $@15 . lista_expr PTCOMA $@16

    error         desplazar e ir al estado 50
    INI_BLOQUE    desplazar e ir al estado 51
    INI_EXPR      desplazar e ir al estado 52
    CADENA        desplazar e ir al estado 22
    CTE_CARACTER  desplazar e ir al estado 53
    CTE_ENTERA    desplazar e ir al estado 54
    CTE_LOGICA    desplazar e ir al estado 55
    CTE_REAL      desplazar e ir al estado 56
    SUMARESTA     desplazar e ir al estado 57
    OPUNARIO      desplazar e ir al estado 58

    expresion      ir al estado 76
    constante      ir al estado 60
    funcion        ir al estado 61
    const_matriz   ir al estado 62
    array_ident    ir al estado 63
    identificador  ir al estado 64
    lista_expr     ir al estado 95


Estado 68

   43 sentencia_do_until: HACER bloque . HASTA INI_EXPR expresion FIN_EXPR

    HASTA  desplazar e ir al estado 96


Estado 69

   40 sentencia_asig: array_ident ASIG . expresion PTCOMA

    error         desplazar e ir al estado 50
    INI_BLOQUE    desplazar e ir al estado 51
    INI_EXPR      desplazar e ir al estado 52
    CADENA        desplazar e ir al estado 22
    CTE_CARACTER  desplazar e ir al estado 53
    CTE_ENTERA    desplazar e ir al estado 54
    CTE_LOGICA    desplazar e ir al estado 55
    CTE_REAL      desplazar e ir al estado 56
    SUMARESTA     desplazar e ir al estado 57
    OPUNARIO      desplazar e ir al estado 58

    expresion      ir al estado 97
    constante      ir al estado 60
    funcion        ir al estado 61
    const_matriz   ir al estado 62
    array_ident    ir al estado 63
    identificador  ir al estado 64


Estado 70

   81 array_ident: identificador INI_TAM . lista_expr FIN_TAM
   82            | identificador INI_TAM . lista_expr FIN_TAM INI_TAM lista_expr FIN_TAM

    error         desplazar e ir al estado 50
    INI_BLOQUE    desplazar e ir al estado 51
    INI_EXPR      desplazar e ir al estado 52
    CADENA        desplazar e ir al estado 22
    CTE_CARACTER  desplazar e ir al estado 53
    CTE_ENTERA    desplazar e ir al estado 54
    CTE_LOGICA    desplazar e ir al estado 55
    CTE_REAL      desplazar e ir al estado 56
    SUMARESTA     desplazar e ir al estado 57
    OPUNARIO      desplazar e ir al estado 58

    expresion      ir al estado 76
    constante      ir al estado 60
    funcion        ir al estado 61
    const_matriz   ir al estado 62
    array_ident    ir al estado 63
    identificador  ir al estado 64
    lista_expr     ir al estado 98


Estado 71

   26 cuerpo_dec_var: TIPO_BASICO $@10 . $@11 lista_identificador PTCOMA

    $default  reduce usando la regla 25 ($@11)

    $@11  ir al estado 99


Estado 72

   20 dec_var_loc: $@8 INI_VAR $@9 var_loc FIN_VAR .

    $default  reduce usando la regla 20 (dec_var_loc)


Estado 73

   22 var_loc: var_loc cuerpo_dec_var .

    $default  reduce usando la regla 22 (var_loc)


Estado 74

   14 cabe_subprog: TIPO_BASICO identificador $@6 INI_EXPR . cabe2

    FIN_EXPR     desplazar e ir al estado 100
    TIPO_BASICO  desplazar e ir al estado 101

    cabe2             ir al estado 102
    lista_parametros  ir al estado 103


Estado 75

   41 sentencia_if: SI INI_EXPR expresion . FIN_EXPR sentencia
   42             | SI INI_EXPR expresion . FIN_EXPR sentencia SI_NO sentencia
   56 expresion: expresion . OR expresion
   57          | expresion . AND expresion
   58          | expresion . XOR expresion
   59          | expresion . OPIGUAL expresion
   60          | expresion . SUMARESTA expresion
   61          | expresion . OPREL expresion
   62          | expresion . OPMUL expresion

    FIN_EXPR   desplazar e ir al estado 104
    OR         desplazar e ir al estado 81
    AND        desplazar e ir al estado 82
    XOR        desplazar e ir al estado 83
    OPREL      desplazar e ir al estado 84
    OPIGUAL    desplazar e ir al estado 85
    SUMARESTA  desplazar e ir al estado 86
    OPMUL      desplazar e ir al estado 87


Estado 76

   56 expresion: expresion . OR expresion
   57          | expresion . AND expresion
   58          | expresion . XOR expresion
   59          | expresion . OPIGUAL expresion
   60          | expresion . SUMARESTA expresion
   61          | expresion . OPREL expresion
   62          | expresion . OPMUL expresion
   91 lista_expr: expresion . $@19

    OR         desplazar e ir al estado 81
    AND        desplazar e ir al estado 82
    XOR        desplazar e ir al estado 83
    OPREL      desplazar e ir al estado 84
    OPIGUAL    desplazar e ir al estado 85
    SUMARESTA  desplazar e ir al estado 86
    OPMUL      desplazar e ir al estado 87

    $default  reduce usando la regla 90 ($@19)

    $@19  ir al estado 105


Estado 77

   73 const_matriz: INI_BLOQUE lista_expr . FIN_BLOQUE
   89 lista_expr: lista_expr . COMA expresion $@18

    FIN_BLOQUE  desplazar e ir al estado 106
    COMA        desplazar e ir al estado 107


Estado 78

   52 expresion: INI_EXPR expresion . FIN_EXPR
   56          | expresion . OR expresion
   57          | expresion . AND expresion
   58          | expresion . XOR expresion
   59          | expresion . OPIGUAL expresion
   60          | expresion . SUMARESTA expresion
   61          | expresion . OPREL expresion
   62          | expresion . OPMUL expresion

    FIN_EXPR   desplazar e ir al estado 108
    OR         desplazar e ir al estado 81
    AND        desplazar e ir al estado 82
    XOR        desplazar e ir al estado 83
    OPREL      desplazar e ir al estado 84
    OPIGUAL    desplazar e ir al estado 85
    SUMARESTA  desplazar e ir al estado 86
    OPMUL      desplazar e ir al estado 87


Estado 79

   54 expresion: SUMARESTA expresion .
   56          | expresion . OR expresion
   57          | expresion . AND expresion
   58          | expresion . XOR expresion
   59          | expresion . OPIGUAL expresion
   60          | expresion . SUMARESTA expresion
   61          | expresion . OPREL expresion
   62          | expresion . OPMUL expresion

    OPMUL  desplazar e ir al estado 87

    $default  reduce usando la regla 54 (expresion)


Estado 80

   55 expresion: OPUNARIO expresion .
   56          | expresion . OR expresion
   57          | expresion . AND expresion
   58          | expresion . XOR expresion
   59          | expresion . OPIGUAL expresion
   60          | expresion . SUMARESTA expresion
   61          | expresion . OPREL expresion
   62          | expresion . OPMUL expresion

    $default  reduce usando la regla 55 (expresion)


Estado 81

   56 expresion: expresion OR . expresion

    error         desplazar e ir al estado 50
    INI_BLOQUE    desplazar e ir al estado 51
    INI_EXPR      desplazar e ir al estado 52
    CADENA        desplazar e ir al estado 22
    CTE_CARACTER  desplazar e ir al estado 53
    CTE_ENTERA    desplazar e ir al estado 54
    CTE_LOGICA    desplazar e ir al estado 55
    CTE_REAL      desplazar e ir al estado 56
    SUMARESTA     desplazar e ir al estado 57
    OPUNARIO      desplazar e ir al estado 58

    expresion      ir al estado 109
    constante      ir al estado 60
    funcion        ir al estado 61
    const_matriz   ir al estado 62
    array_ident    ir al estado 63
    identificador  ir al estado 64


Estado 82

   57 expresion: expresion AND . expresion

    error         desplazar e ir al estado 50
    INI_BLOQUE    desplazar e ir al estado 51
    INI_EXPR      desplazar e ir al estado 52
    CADENA        desplazar e ir al estado 22
    CTE_CARACTER  desplazar e ir al estado 53
    CTE_ENTERA    desplazar e ir al estado 54
    CTE_LOGICA    desplazar e ir al estado 55
    CTE_REAL      desplazar e ir al estado 56
    SUMARESTA     desplazar e ir al estado 57
    OPUNARIO      desplazar e ir al estado 58

    expresion      ir al estado 110
    constante      ir al estado 60
    funcion        ir al estado 61
    const_matriz   ir al estado 62
    array_ident    ir al estado 63
    identificador  ir al estado 64


Estado 83

   58 expresion: expresion XOR . expresion

    error         desplazar e ir al estado 50
    INI_BLOQUE    desplazar e ir al estado 51
    INI_EXPR      desplazar e ir al estado 52
    CADENA        desplazar e ir al estado 22
    CTE_CARACTER  desplazar e ir al estado 53
    CTE_ENTERA    desplazar e ir al estado 54
    CTE_LOGICA    desplazar e ir al estado 55
    CTE_REAL      desplazar e ir al estado 56
    SUMARESTA     desplazar e ir al estado 57
    OPUNARIO      desplazar e ir al estado 58

    expresion      ir al estado 111
    constante      ir al estado 60
    funcion        ir al estado 61
    const_matriz   ir al estado 62
    array_ident    ir al estado 63
    identificador  ir al estado 64


Estado 84

   61 expresion: expresion OPREL . expresion
